<resources>
    <string name="app_name">VTracker</string>
    <string name="title_activity_main">Main</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="not_log_in">Could not log in</string>
    <string name="log_out">Log Out</string>
    <string name="login">Register</string>
    <string name="set">Settings</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">Could not sign out</string>
    <string name="not_revoke">Could not revoke access</string>
    <string name="not_firebase_auth">Could not log</string>
    <string name="headline">VIOM IOT MACHINES PRIVATE LIMITED</string>
    <string name="passhint">Password</string>
    <string name="email">Email Address</string>

    <string name="SOS2">SOS no.</string>
    <string name="reg">Register</string>
    <string name="already_reg">Not Registered?Sign up</string>
    <string name="name">Full name</string>
    <string name="SOS1">Phone number</string>
</resources>
