<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/walls21"
    android:layout_height="match_parent"
    tools:context="vyom.com.vtracker.Register">
    <ImageButton
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:background="@mipmap/settings"
        android:id="@+id/imageButton8"
        android:contentDescription="@string/set"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/passhint"
        android:background="#ffffff"
        android:text=""
        android:ems="10"
        android:id="@+id/edi_full_name"
        android:layout_above="@+id/edi_email_address"
        android:layout_alignLeft="@+id/edi_pass_no"
        android:layout_alignStart="@+id/edi_pass_no"
        android:layout_marginBottom="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:background="#ffffff"
        android:ems="10"
        android:id="@+id/edi_pass_no"
        android:layout_marginBottom="36dp"
        android:layout_above="@+id/edi_full_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/edi_email_address"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/edi_sos_1"
        android:layout_alignLeft="@+id/edi_full_name"
        android:layout_alignStart="@+id/edi_full_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SOS1"
        android:inputType="number"
        android:background="#ffffff"
        android:ems="10"
        android:id="@+id/edi_sos_1"
        android:layout_marginBottom="44dp"
        android:layout_above="@+id/edi_sos_2"
        android:layout_alignLeft="@+id/edi_email_address"
        android:layout_alignStart="@+id/edi_email_address" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/SOS2"
        android:background="#ffffff"
        android:ems="10"
        android:id="@+id/edi_sos_2"
        android:layout_marginBottom="71dp"
        android:layout_alignBottom="@+id/btn_reg"
        android:layout_alignLeft="@+id/edi_sos_1"
        android:layout_alignStart="@+id/edi_sos_1" />

    <Button
        android:text="@string/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reg"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
