<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@mipmap/walls59"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vyom.com.vtracker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:background="@mipmap/user4" />

        <TextView
            android:id="@+id/nameTextView"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_log_Out"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:onClick="logOut"
        android:text="@string/log_out" />

    <Button
        android:layout_width="match_parent"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:text="@string/revoke"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="revoke"
        />

    <com.roughike.bottombar.BottomBar

        android:id="@+id/bottomBar"

        android:layout_width="match_parent"

        android:layout_height="60dp"

        android:layout_alignParentBottom="true"

        app:bb_tabXmlResource="@xml/navigation_bar_menu"

        app:bb_behavior="underNavbar"/>


</LinearLayout>
